--- a/app/views/events/index.erb
+++ b/app/views/events/index.erb
@@ -1,6 +1,6 @@
 <h2>Events</h2>
 <%= render_activities(@activities) %>
-  <h3><%= "Hi #{current_user.first_name}. You are user #{current_user.id} " %></h3>
+  <h3><%#= "Hi #{current_user.first_name}. Welcome to Saturdaze! " %></h3>
 <button><%= link_to "New Event", new_event_path %></button>
 <div>
 <ul class="hosted">
@@ -18,6 +18,7 @@
       <li>Description: <%= event.description %></li>
       <li>Location: <%= event.location.name %></li>
       <li>Host: <%= event.host.fullname %></li>
+      <li><%= pluralize(event.rsvps.select{|x|x.is_commited == true}.count, 'RSVP')%></li>
     </ul>
   </li>
   <% end  %>
