--- a/app/views/users/sales.erb
+++ b/app/views/users/sales.erb
@@ -3,7 +3,7 @@
 <h5>Number of Guests/Event</h5>
 <%= column_chart Event.joins(:rsvps).group(:name).count %>
 <h5>Number of Events/Location</h5>
-<%= column_chart Location.joins(:events).group(:name).count %>
+<%= pie_chart Location.joins(:events).group(:name).count %>
 <%#= chartkick for tomorrow: https://www.chartkick.com/  %>
 <table>
   <tr>
