--- a/app/views/events/edit.erb
+++ b/app/views/events/edit.erb
@@ -12,7 +12,10 @@
   <%= f.label :name, "Event Name:" %>
   <%= f.text_field :name, {size:"48"} %><br><br>
   <%= f.label :date, "Choose a Saturday:" %>
-  <%= radio_button_tag :date, :date%> April 16, 2018<br><br>
+  <%= f.select :date, options_for_select(@dates) %>
+
+<br><br>
+
   <%= f.label :description, "Event Description:" %><br>
   <%= f.text_area :description,{rows: "9",cols: "60"} %><br><br>
 
@@ -46,10 +49,8 @@
   <%= f.submit %>
 
 
-  <%= javascript_tag do %>
-  $(document).ready(function() {
-    $("body").css("background","linear-gradient(to bottom, #fff 0%,  #fff 50%, #aaa 100%)");
-  });
+  <script type="text/javascript">
+  $("datalist option").eq(<%= current_user.id - 1 %>).val("");
 
   $("button").click(function(event){
   event.preventDefault();
@@ -61,7 +62,7 @@
   $("input[list='guest_autocomplete']").val("");
   $("datalist option[value='" + name + "']:first").val("");
 
-  $("#checked").append('<label for=\"event_guest_ids_' + id + '\">' + name + '</label>: <input type=\"checkbox\" value=\"' + id + '\" checked=\"checked\" name=\"event[guest_ids][]\" id=\"event_guest_ids_' + id + '\">');
+  $("#checked").append('<div style=\"margin-right:50px;white-space:nowrap; display:inline-block"><label for=\"event_guest_ids_' + id + '\">' + name + '</label>: <input type=\"checkbox\" value=\"' + id + '\" checked=\"checked\" name=\"event[guest_ids][]\" id=\"event_guest_ids_' + id + '\">');
   });
-  <%end  %>
+</script>
 <% end %>
