--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <li><%= link_to 'Manage Locations', '/manage/locations' %></li>
         <li><%= link_to 'Manage Amenities', '/manage/amenities' %></li>
 
-        <li><%= link_to 'Manage Users','/manage/users' %></li>
+        <li><%= link_to 'Users','/manage/users' %></li>
         <li><%= link_to 'Performance Report', sales_path %></li>
       </ul>
       </nav>
@@ -49,7 +49,7 @@
     <main>
       <article>
     <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
+    <div class="alert alert-<%= key %>"><%= value.html_safe%></div>
     <% end %>
   </article>
 
