--- a/app/views/amenities/edit.erb
+++ b/app/views/amenities/edit.erb
@@ -13,9 +13,14 @@
   <%= f.text_field :name %><br><br>
   <%= f.label :description %><br>
   <%= f.text_area :description %><br><br>
-  <%= f.label :price %><br>
+  <div class="input-field inline">
+
+  <i class="material-icons prefix">attach_money</i>
   <% dollars = @amenity.price_in_cents.to_f.round(2)/100.to_i %>
   <% display = sprintf( "%0.02f", dollars).to_s.reverse.gsub(/(\d{3})(?=\d)/, '\\1,').reverse %>
-  $<%= f.text_field :price_in_cents, {value: display} %><br><br>
-  <%= f.submit %>
+  <%= f.text_field :price_in_cents, {value: display, style:"padding-left: 1em"} %>
+  <%= f.label :price %><br>
+</div>
+<br><br>
+  <%= f.submit value="Edit Amenity", {class: "btn"} %>
 <% end %>
