--- a/app/views/locations/new.erb
+++ b/app/views/locations/new.erb
@@ -15,5 +15,5 @@
   <%= f.text_area :description %><br><br>
   <%= f.label :address %><br>
   <%= f.text_area :address %><br><br>
-  <%= f.submit %>
+  <%= f.submit value="Create Location", {class: "btn"} %>
 <% end %>
