--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -16,5 +16,5 @@
   Email: <%= f.text_field :email %><br>
   Password: <%= f.password_field :password %><br>
   Password Confirmation: <%= f.password_field :password_confirmation %><br>
-  <%= f.submit "Create Account" %>
+  <%= f.submit "Create Account", class: "btn waves-effect waves-light"  %>
 <% end %>
