--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,19 +1,15 @@
 .hosted,.invited{float:left;width:40%;margin:25px;vertical-align:top;}
-.admin_menu li{display:inline-block;width:18%}
-.user_menu li{display:inline-block;width:18%}
+/* .admin_menu li{display:inline-block;width:18%}
+.user_menu li{display:inline-block;width:18%} */
 body,html{width:100%;height:100%;margin:0; font-family: "Lucida Console", Monaco, monospace
 }
-main{width: 100%;margin: 0 auto;padding:275px 25px; background-color:white;}
+main{width: 100%;margin: 0 auto;padding:100px 25px; background-color:white;}
 main > ul{width:50%;margin:auto}
-header{
-  position:fixed;
-  width:100%;
-  margin:0;
+nav{
   box-shadow: 0px 0px 24px 3px #000000;
-  background-color:#000;
-  z-index:1
+  z-index:99
 }
-nav:first-of-type{
+/* nav:first-of-type{
   padding:1px 0;
   background-color:#000
 }
@@ -42,7 +38,10 @@ nav:last-of-type li:nth-child(-n+4){
   border-right:1px solid #000;
 }
 nav{margin:0;text-align: center;}
-nav a{color:white}
+nav button{
+  padding:12px 24px;
+} */
+/* nav a{color:white} */
 td, th {
     padding:0
   }
@@ -56,18 +55,16 @@ input[type='submit']{cursor:pointer}
   display:block;
   text-align:center;
 }
-nav button{
-  padding:12px 24px;
-  }
+
   button a{
-  color:#2cb5e9 !important;
+  /* color:#2cb5e9 !important; */
   font-weight:bold;
   font-size:18px;
 }
-.banner{
+/* .banner{
   background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
   padding:24px 0 0;
-}
+} */
 a{text-decoration:none;
 padding-right:3px;color:#2cb5e9 }
 .errors, article{color:red}
@@ -114,12 +111,9 @@ select{
 textarea{
   height:150px
 }
-nav ul a:hover {
-    background-color: transparent
-}
-nav:last-of-type li:hover{
-    height: 81px;
-    margin-top: -9px;
+.nav-content li a:hover {
+    background-color: transparent;
+    margin-top: 9px;
 }
 
 label {
@@ -134,3 +128,36 @@ th {
 form div:nth-of-type(odd) {
     background-color: transparent;
 }
+textarea,textarea:focus, select, select:focus{border:none;outline:none;padding-top:3px}
+.nav-content{float:right}
+.nav-content li {
+    display: inline-block;
+    height: 100%;
+}
+.nav-content li:nth-child(-n+4) a{    font-size: 2.2em}
+nav .brand-logo{
+  font-size:5em;
+    padding: 18px 36px 0;}
+nav ul {
+    margin: 12px 0;
+    min-height: 60px;
+}
+nav ul a:hover {
+    height: 100%;
+}
+nav.nav-extended .nav-wrapper {
+    min-height: 84px;
+}
+label{color:#9e9e9e}
+
+.row .col.m7 {
+    width: 33%;
+    float: left;
+  }
+
+  .card-content{
+
+    min-height:375px
+
+  }
+  label label {color:#000}
