--- a/app/views/amenities/new.erb
+++ b/app/views/amenities/new.erb
@@ -13,7 +13,11 @@
   <%= f.text_field :name %><br><br>
   <%= f.label :description %><br>
   <%= f.text_area :description %><br><br>
-  <%= f.label :price %><br>
-  $<%= f.text_field :price_in_cents %><br><br>
-  <%= f.submit %>
+  <div class="input-field inline">
+
+  <i class="material-icons prefix">attach_money</i>
+<%= f.text_field :price_in_cents, style:"padding-left: 1em" %><br>
+<%= f.label :price %>
+</div><br><br>
+  <%= f.submit value="Create Amenity", {class: "btn"} %>
 <% end %>
