--- a/app/views/amenities/show.erb
+++ b/app/views/amenities/show.erb
@@ -1,7 +1,19 @@
-<h2><%= @amenity.name %></h2>
+<ul>
+  <div class="card">
+    <div class="card-image">
+    </div>
+    <div class="card-content"><ul>
+
+      <h2><%= @amenity.name %></h2>
 
 <ul>
   <li>Description: <%= @amenity.description %></li>
   <li>Price: $<%= @amenity.price_change %></li>
-
-<button><%= link_to 'Edit', edit_amenity_path(@amenity) %></button>
+</div>
+<% if current_user.email == "admin@gmail.com"  %>
+<div class="card-action">
+<%= link_to 'Edit', edit_amenity_path(@amenity) , class: "waves-effect waves-light btn" %>
+</div>
+<% end  %>
+</div>
+</ul>
