--- a/app/views/events/edit.erb
+++ b/app/views/events/edit.erb
@@ -9,26 +9,36 @@
 <% end  %>
 <%= form_for @event do |f| %>
 <h2>Edit Event</h2>
-  <%= f.label :name, "Event Name:" %>
+<div class="input-field">
+
   <%= f.text_field :name, {size:"48"} %><br><br>
+  <%= f.label :name, "Event Name:" %>
+</div>
+<div class="input-field inline">
   <%= f.label :date, "Choose a Saturday:" %>
-  <%= f.select :date, options_for_select(@dates) %>
+  <%= f.select :date, options_for_select(@dates), {:prompt => false}, {style: "margin-left: 9em;font-size:1.2em"} %>
+</div>
 
 <br><br>
+<div class="input-field">
 
-  <%= f.label :description, "Event Description:" %><br>
   <%= f.text_area :description,{rows: "9",cols: "60"} %><br><br>
+  <%= f.label :description, "Event Description:" %><br>
+</div>
 
-  <label>Event Guests:</label>
-
-  <input list="guest_autocomplete" size="30">
+<label for="icon_prefix" style="color:#9e9e9e">Event Guests:</label>
+<div class="input-field inline">
+  <i class="material-icons prefix">child_care</i>
+  <input id="icon_prefix" list="guest_autocomplete" size="30" class="autocomplete" style="    padding-left: 1em;">
     <datalist id="guest_autocomplete">
-
       <% User.all.each do |guest| %>
         <option value="<%= guest.fullname %>">
       <% end %>
     </datalist>
-    <button type="button">Add Guest to Guest List</button>
+
+  </div>
+  <button type="button" class="btn" style="margin-left: 1em;"><i class="material-icons prefix">add_box</i>Add Guest</button>
+
     <br>
     <div id="checked">
       <%= f.collection_check_boxes :guest_ids, @event.guests, :id, :fullname, {} do |b|
@@ -36,17 +46,21 @@
       end %>
     </div>
     <br><br>
-  <%= f.label :location_id, "Location:" %><br>
-  <%= f.collection_select :location_id, Location.all, :id, :name %><br><br>
+    <div class="input-field inline">
+    <%= f.collection_select :location_id, Location.all, :id, :name, {:prompt => false}, {style: "margin-left: 6em;font-size:1.2em"} %>
+    <%= f.label :location_id, "Location:" %><br>
+  </div>
+  <br>
+
   <%= f.label :amenities, "Choose Amenities:" %><br>
 
   <%= f.collection_check_boxes :amenity_ids, Amenity.all, :id, :name, {} do |b|
-    b.label(style: "margin-right:50px;white-space:nowrap; display:inline-block;") { b.label + ": "+ b.check_box}
+    b.label(style: "color:#000;margin-right:50px;white-space:nowrap; display:inline-block;") { b.label + ": "+ b.check_box}
   end  %>
 
   <%= f.hidden_field :host_id, value: current_user.id %><br><br>
 
-  <%= f.submit %>
+  <%= f.submit value="Edit Event", {class: "btn"}%>
 
 
   <script type="text/javascript">
@@ -62,7 +76,7 @@
   $("input[list='guest_autocomplete']").val("");
   $("datalist option[value='" + name + "']:first").val("");
 
-  $("#checked").append('<div style=\"margin-right:50px;white-space:nowrap; display:inline-block"><label for=\"event_guest_ids_' + id + '\">' + name + '</label>: <input type=\"checkbox\" value=\"' + id + '\" checked=\"checked\" name=\"event[guest_ids][]\" id=\"event_guest_ids_' + id + '\">');
+  $("#checked").append('<div style=\"color:#000;margin-right:50px;white-space:nowrap; display:inline-block"><label style =\"color:#000\" for=\"event_guest_ids_' + id + '\">' + name + '</label>: <input type=\"checkbox\" value=\"' + id + '\" checked=\"checked\" name=\"event[guest_ids][]\" id=\"event_guest_ids_' + id + '\">');
   });
 </script>
 <% end %>
