--- a/app/views/locations/all.erb
+++ b/app/views/locations/all.erb
@@ -1,6 +1,6 @@
 <h2>Manage Locations</h2>
-<button><%= link_to "New Location", new_location_path %></button>
-<table>
+<%= link_to "New Location", new_location_path , class: "waves-effect waves-light btn" %>
+<table class="responsive-table">
   <tr>
     <th>name</th>
     <th>description</th>
@@ -13,8 +13,8 @@
     <td><%= link_to location.name, location_path(location) %></td>
     <td><%= location.description %></td>
     <td><%= location.address %></td>
-    <td><button><%= link_to 'Edit', edit_location_path(location) %></button></td>
-    <td><button><%= link_to 'Delete', location, method: :delete, data: {confirm: "Are you sure?"} %></button></td>
+    <td><%= link_to 'Edit', edit_location_path(location) , class: "waves-effect waves-light btn" %></td>
+    <td><%= link_to 'Delete', location, method: :delete, data: {confirm: "Are you sure?"} , class: "waves-effect waves-light btn" %></td>
   </tr>
   <% end %>
 
