--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       <% if current_user %>
 
       <nav class="nav-extended">
-        <a href="#" class="brand-logo">Saturdaze</a>
+        <a href="/" class="brand-logo" style="z-index: 1">Saturdaze</a>
          <div class="nav-wrapper">
            <% if current_user.email == "admin@gmail.com"  %>
               <ul class="right hide-on-med-and-down"  id="mobile-demo">
