--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,7 +3,8 @@
 .user_menu li{display:inline-block;width:18%} */
 body,html{width:100%;height:100%;margin:0; font-family: "Lucida Console", Monaco, monospace
 }
-main{width: 100%;margin: 0 auto;padding:100px 25px; background-color:white;}
+main{width: 100%;margin: 0 auto;padding:100px 25px;}
+select,main{ background-color:#eae8dc;}
 main > ul{width:50%;margin:auto}
 nav{
   box-shadow: 0px 0px 24px 3px #000000;
@@ -93,6 +94,7 @@ td{
 }
 table{
   margin:auto;
+  background-color:white
 }
 
 form, article{
@@ -145,6 +147,7 @@ nav ul {
 nav ul a:hover {
     height: 100%;
 }
+.nav-extended{background-color: #4774a0;}
 nav.nav-extended .nav-wrapper {
     min-height: 84px;
 }
@@ -155,9 +158,13 @@ label{color:#9e9e9e}
     float: left;
   }
 
-  .card-content{
+  .s12 .card-content{
 
     min-height:375px
 
   }
   label label {color:#000}
+
+  .input-field>label:not(.label-icon) {
+    transform: translateY(-14px) scale(0.8);
+  }
