--- a/app/views/events/edit.erb
+++ b/app/views/events/edit.erb
@@ -7,6 +7,7 @@
   <% end  %>
 </ul>
 <% end  %>
+<div class="edit">
 <%= form_for @event do |f| %>
 <h2>Edit Event</h2>
 
@@ -88,3 +89,4 @@
   });
 </script>
 <% end %>
+</div>
