--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,7 +4,7 @@
 body,html{width:100%;height:100%;margin:0; font-family: "Lucida Console", Monaco, monospace
 }
 main{width: 100%;margin: 0 auto;padding:100px 25px;}
-select,main{ background-color:#eae8dc;}
+select,body{ background-color:#eae8dc;}
 main > ul{width:50%;margin:auto}
 nav{
   box-shadow: 0px 0px 24px 3px #000000;
@@ -102,11 +102,11 @@ form, article{
   margin:auto
 }
 
-[type="checkbox"], [type="radio"] {
+/* [type="checkbox"], [type="radio"] {
     position: unset !important;
     opacity: 100 !important;
     pointer-events: unset !important;
-}
+} */
 select{
   display:block;
 }
@@ -136,10 +136,10 @@ textarea,textarea:focus, select, select:focus{border:none;outline:none;padding-t
     display: inline-block;
     height: 100%;
 }
-.nav-content li:nth-child(-n+4) a{    font-size: 2.1em}
+.nav-content li:nth-child(-n+4) a{    font-size: 2.2em}
 nav .brand-logo{
   font-size:5em;
-    padding: 18px 36px 0;}
+    padding: 18px 0 0 84px;}
 nav ul {
     margin: 12px 0;
     min-height: 60px;
@@ -166,5 +166,9 @@ label{color:#9e9e9e}
   label label {color:#000}
 
   .edit .input-field>label:not(.label-icon) {
-      transform: translateY(-14px) scale(0.8);
+      transform: translateY(-14px);
     }
+    [type="checkbox"]+span:not(.lever){top:7px}
+
+
+    textarea.materialize-textarea{min-height: 12rem;}
