--- a/app/views/amenities/new.erb
+++ b/app/views/amenities/new.erb
@@ -9,10 +9,14 @@
 <% end  %>
 <%= form_for @amenity do |f| %>
 <h2>New Amenity</h2>
-  <%= f.label :name %><br>
-  <%= f.text_field :name %><br><br>
-  <%= f.label :description %><br>
-  <%= f.text_area :description %><br><br>
+<div class="input-field">
+  <%= f.text_field :name %>
+  <%= f.label :name %>
+</div>
+  <div class="input-field">
+  <%= f.text_area :description, class:"materialize-textarea"%>
+  <%= f.label :description %>
+</div>
   <div class="input-field inline">
 
   <i class="material-icons prefix">attach_money</i>
