--- a/app/views/locations/new.erb
+++ b/app/views/locations/new.erb
@@ -9,11 +9,19 @@
 <% end  %>
 <%= form_for @location do |f| %>
 <h2>New Location</h2>
-  <%= f.label :name %><br>
-  <%= f.text_field :name %><br><br>
-  <%= f.label :description %><br>
-  <%= f.text_area :description %><br><br>
-  <%= f.label :address %><br>
-  <%= f.text_area :address %><br><br>
+<div class="input-field">
+  <%= f.text_field :name %>
+  <%= f.label :name %>
+</div>
+  <div class="input-field">
+  <%= f.text_area :description, class:"materialize-textarea" %>
+  <%= f.label :description %>
+</div>
+
+  <div class="input-field">
+  <%= f.text_area :address, class:"materialize-textarea" %>
+  <%= f.label :address %>
+</div>
+
   <%= f.submit value="Create Location", {class: "btn"} %>
 <% end %>
